clusters/local/apps/wordpress/redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect-notfound
  namespace: wordpress
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://www.google.com
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
spec:
  ingressClassName: nginx
  rules:
  - host: app.local
    http:
      paths:
      - path: /notfound
        pathType: Exact
        backend:
          service:
            name: wordpress
            port:
              number: 80
